[gd_scene load_steps=12 format=3 uid="uid://dha5tou5cl8uq"]

[ext_resource type="PackedScene" uid="uid://d1fq03r5qo24p" path="res://Projectiles/projectile_base.tscn" id="1_p3cnp"]
[ext_resource type="Script" path="res://Projectiles/CheeseBomb/cheese_bomb.gd" id="2_1t101"]
[ext_resource type="Texture2D" uid="uid://8ffsamfpeja5" path="res://Assets/ContraptionAssets/CheeseCannon/cheese.png" id="2_dlhnt"]
[ext_resource type="Script" path="res://Projectiles/projectile_resource.gd" id="3_81rr1"]
[ext_resource type="SpriteFrames" uid="uid://woiw4hovbui6" path="res://Assets/CharacterAssets/Enemy/FlyingFish/flying_fish.tres" id="4_piu42"]
[ext_resource type="AudioStream" uid="uid://dcfl4eqeu4v1b" path="res://Assets/SFX/Contraptions/CheeseLaunch.mp3" id="6_v8w71"]
[ext_resource type="AudioStream" uid="uid://pnxn4b4javwd" path="res://Assets/SFX/Contraptions/CheeseExplosion.mp3" id="7_uul4o"]

[sub_resource type="Resource" id="Resource_3pk0q"]
script = ExtResource("3_81rr1")
damage = 30
level = 0
speed = 50
collat = 1
size = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qqedl"]
atlas = ExtResource("2_dlhnt")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_mthgx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqedl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nqfya"]
radius = 32.0624

[node name="CheeseBomb" node_paths=PackedStringArray("hitbox_col", "explosion_sprite") instance=ExtResource("1_p3cnp")]
script = ExtResource("2_1t101")
hitbox_col = NodePath("Hitbox/CollisionShape2D")
explosion_sprite = NodePath("ExplosionSprite")
projectile_resource = SubResource("Resource_3pk0q")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_mthgx")
frame_progress = 0.0

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="." index="2"]
visible = false
sprite_frames = ExtResource("4_piu42")
animation = &"explode"

[node name="Hitbox" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_nqfya")
disabled = true

[node name="CheeseThrow" type="AudioStreamPlayer" parent="." index="5"]
unique_name_in_owner = true
stream = ExtResource("6_v8w71")
volume_db = -30.0

[node name="CheeseExplosion" type="AudioStreamPlayer" parent="." index="6"]
unique_name_in_owner = true
stream = ExtResource("7_uul4o")
volume_db = -30.0

[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
